Fixed: Various layout issues.

--- a/app/assets/stylesheets/module.styl
+++ b/app/assets/stylesheets/module.styl
@@ -653,6 +653,12 @@ vpf-padding-small = 10px
 			margin 0
 			td 
 				border none
+.dmd.leaderboard > table
+	td
+		padding-top 5px
+		padding-bottom 5px
+	tr:first-child > td
+		padding-top 10px
 
 // :console
 // ============================================================================
